# KoobFood

./: .coverage  .coveragerc  .env  Dockerfile  Justfile  compose.debug.yaml  compose.yaml  main.py  manage.py  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  ci_tests.yml
backend/: .python-version  Dockerfile  Justfile  promtail-config.yaml  pyproject.toml  requirements.txt
backend/home/: views.py
backend/koobfood/: celery.py  middleware.py  urls.py  wsgi.py
backend/loki/: loki-config.yaml
backend/reservation/: admin.py  apps.py  forms.py  models.py  tasks.py  views.py
backend/restaurant/: admin.py  views.py
backend/users/: factories.py  forms.py  models.py  urls.py  views.py
db/: init.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Router.jsx
home/tests/: test_homeview.py
koobfood/: asgi.py  settings.py  urls.py
koobfood/api/: permissions.py
koobfood/settings/: base.py  local.py  production.py  test.py
koobfood/tests/: test_api_user_manager.py
reservation/: factories.py  forms.py  models.py  urls.py  views.py
reservation/api/: serializers.py  urls.py  views.py
reservation/migrations/: 0001_initial.py
reservation/tests/: test_reservationlist.py
restaurant/: factories.py  forms.py  models.py  serializers.py  urls.py  views.py
restaurant/api/: serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0004_alter_restaurant_capacity.py
restaurant/tests/: test_restaurantcreate.py  test_restauranttable.py
users/: serializers.py  urls.py  views.py
(+78 files in other folders)
